# cozo

./: Cargo.toml
cozo-bin/: Cargo.toml
cozo-bin/src/: repl.rs  server.rs
cozo-core/: Cargo.toml  README.md
cozo-core/benches/: pokec.rs  time_travel.rs  wiki_pagerank.rs
cozo-core/src/: lib.rs  utils.rs
cozo-core/src/data/: aggr.rs  functions.rs  value.rs
cozo-core/src/data/tests/: memcmp.rs
cozo-core/src/parse/: query.rs
cozo-core/src/query/: ra.rs
cozo-core/src/storage/: mod.rs  newrocks.rs  rocks.rs
cozo-core/tests/: air_routes.rs
cozo-lib-c/: Cargo.toml
cozorocks/: Cargo.toml
